1-1/hello.txt
This file lists the error messages recieved when altering the syntax of "hello.c". 

Error 1: Changing "main()" to "main(", i.e. leaving out a parathesis. 
------------------------------------OUTPUT--------------------------------------
hello.c:4:1: error: expected declaration specifiers or ‘...’ before ‘{’ token
 {
 ^
--------------------------------------------------------------------------------

Error 2: Changing "void" to "voi". 
--------------------------------------------------------------------------------
hello.c:3:1: error: unknown type name ‘voi’
 voi main() 
 ^
 -------------------------------------------------------------------------------

Error 3: Removing the 'hashtag' symbol in the preprocessing directive #include <stdio.h> 
--------------------------------------------------------------------------------
hello.c:1:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
 include <stdio.h> 
         ^
--------------------------------------------------------------------------------

